[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/demo.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://ui_elem/clickable_line_edit.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui_elem/test_text_edit.tscn" type="PackedScene" id=4]
[ext_resource path="res://img/logo.png" type="Texture" id=5]
[ext_resource path="res://ui_elem/kering_pairs_grid.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui_elem/outline_stack.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.211765, 1, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.94902, 1, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="Main" type="Node"]
script = ExtResource( 2 )
charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
char_size = Vector2( 13, 20 )
charbox_size = Vector2( 20, 24 )
charbox_margin = Vector2( 3, 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="UI/VSplitContainer"]
margin_right = 1024.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="UI/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Options" type="GridContainer" parent="UI/VSplitContainer/TabContainer/Main"]
margin_right = 1016.0
margin_bottom = 136.0
columns = 2

[node name="Helper" type="Sprite" parent="UI/VSplitContainer/TabContainer/Main/Options"]
position = Vector2( 380, 96 )
scale = Vector2( 0.288879, 0.288879 )
texture = ExtResource( 1 )

[node name="LabelTexture" type="Label" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_top = 5.0
margin_right = 119.0
margin_bottom = 19.0
text = "Texture:  "

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_left = 123.0
margin_right = 1016.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditTexture" parent="UI/VSplitContainer/TabContainer/Main/Options/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 722.0
placeholder_text = "Click here to select file or drop image file into this window (*.png, *.bmp)"

[node name="Button" type="Button" parent="UI/VSplitContainer/TabContainer/Main/Options/HBoxContainer"]
margin_left = 726.0
margin_right = 893.0
margin_bottom = 24.0
text = "Click here to use default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCharset" type="Label" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_top = 33.0
margin_right = 119.0
margin_bottom = 47.0
text = "Charset:  "

[node name="LineEditCharset" type="LineEdit" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_left = 123.0
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 52.0
size_flags_horizontal = 3
placeholder_text = "Type all texture characters here"

[node name="LabelCharSize" type="Label" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_top = 59.0
margin_right = 119.0
margin_bottom = 77.0
custom_styles/normal = SubResource( 1 )
text = "Char size:  "

[node name="CharSizeHBox" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_left = 123.0
margin_top = 56.0
margin_right = 1016.0
margin_bottom = 80.0

[node name="X" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharSizeHBox"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
max_value = 128.0
value = 11.0
prefix = "w:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharSizeHBox"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
min_value = 1.0
max_value = 128.0
value = 18.0
prefix = "h:"

[node name="LabelCharBoxSize" type="Label" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_top = 87.0
margin_right = 119.0
margin_bottom = 105.0
custom_styles/normal = SubResource( 2 )
text = "Char box size:  "

[node name="CharBoxSizeHBox" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_left = 123.0
margin_top = 84.0
margin_right = 1016.0
margin_bottom = 108.0

[node name="X" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharBoxSizeHBox"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 1.0
max_value = 128.0
value = 20.0
prefix = "w:"

[node name="Y" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharBoxSizeHBox"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
min_value = 1.0
max_value = 128.0
value = 24.0
prefix = "h:"

[node name="LabelCharBoxMargin" type="Label" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_top = 115.0
margin_right = 119.0
margin_bottom = 133.0
custom_styles/normal = SubResource( 3 )
text = "Char box margin:  "

[node name="CharBoxMarginHBox" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer/Main/Options"]
margin_left = 123.0
margin_top = 112.0
margin_right = 1016.0
margin_bottom = 136.0

[node name="X" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharBoxMarginHBox"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 128.0
value = 5.0
prefix = "left:"

[node name="Y" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Main/Options/CharBoxMarginHBox"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
max_value = 128.0
value = 3.0
prefix = "top:"

[node name="CreateFont" type="Button" parent="UI/VSplitContainer/TabContainer/Main"]
margin_top = 140.0
margin_right = 1016.0
margin_bottom = 160.0
disabled = true
text = "Create font"

[node name="Output" type="Panel" parent="UI/VSplitContainer/TabContainer/Main"]
margin_top = 164.0
margin_right = 1016.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestTextEdit" parent="UI/VSplitContainer/TabContainer/Main/Output" instance=ExtResource( 4 )]

[node name="Outline" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="OutlineStack" parent="UI/VSplitContainer/TabContainer/Outline" instance=ExtResource( 7 )]
margin_bottom = 228.0

[node name="VSeparator" type="VSeparator" parent="UI/VSplitContainer/TabContainer/Outline"]
margin_left = 506.0
margin_right = 510.0
margin_bottom = 228.0

[node name="TestTextEdit" parent="UI/VSplitContainer/TabContainer/Outline" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_right = 1016.0
margin_bottom = 228.0

[node name="Kering" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Options" type="GridContainer" parent="UI/VSplitContainer/TabContainer/Kering"]
margin_right = 275.0
margin_bottom = 308.0
columns = 2

[node name="LabelFilter" type="Label" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
text = "Filter: "

[node name="Filter" type="HBoxContainer" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_left = 155.0
margin_right = 275.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CharA" type="LineEdit" parent="UI/VSplitContainer/TabContainer/Kering/Options/Filter"]
margin_right = 58.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 1
placeholder_text = "Char A"

[node name="CharB" type="LineEdit" parent="UI/VSplitContainer/TabContainer/Kering/Options/Filter"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 1
placeholder_text = "Char B"

[node name="LabelColumns" type="Label" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_top = 33.0
margin_right = 151.0
margin_bottom = 47.0
text = "Columns:"

[node name="SpinBoxColumns" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_left = 155.0
margin_top = 28.0
margin_right = 275.0
margin_bottom = 52.0
min_value = 1.0
max_value = 5.0
value = 3.0

[node name="ButtonApplyToSelected" type="Button" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_top = 56.0
margin_right = 151.0
margin_bottom = 80.0
text = "Apply to selected"

[node name="SpinBoxApplyToSelected" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_left = 155.0
margin_top = 56.0
margin_right = 275.0
margin_bottom = 80.0

[node name="ButtonAutokering" type="Button" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_top = 84.0
margin_right = 151.0
margin_bottom = 108.0
text = "Set by space between"

[node name="SpinBoxAutokering" type="SpinBox" parent="UI/VSplitContainer/TabContainer/Kering/Options"]
margin_left = 155.0
margin_top = 84.0
margin_right = 275.0
margin_bottom = 108.0
min_value = -100.0
value = 1.0

[node name="VSeparator" type="VSeparator" parent="UI/VSplitContainer/TabContainer/Kering"]
margin_left = 279.0
margin_right = 283.0
margin_bottom = 308.0

[node name="Items" type="ScrollContainer" parent="UI/VSplitContainer/TabContainer/Kering"]
margin_left = 287.0
margin_right = 1016.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" parent="UI/VSplitContainer/TabContainer/Kering/Items" instance=ExtResource( 6 )]

[node name="Export" type="VBoxContainer" parent="UI/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ButtonExport" type="Button" parent="UI/VSplitContainer/TabContainer/Export"]
margin_right = 1016.0
margin_bottom = 20.0
text = "Save as file"

[node name="Panel" type="Panel" parent="UI/VSplitContainer"]
margin_top = 412.0
margin_right = 1024.0
margin_bottom = 768.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VSplitContainer/Panel"]
margin_right = 1024.0
margin_bottom = 556.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Label" parent="UI/VSplitContainer/Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "This tool makes you able to create bitmap font from a spritesheet in a couple of clicks!!"
align = 1

[node name="Instruction1" type="Label" parent="UI/VSplitContainer/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "    ​To create font file:"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VSplitContainer/Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0

[node name="Instruction2" type="Label" parent="UI/VSplitContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 334.0
margin_bottom = 14.0
text = "1. Drag & drop your spritesheet file into this window"

[node name="LinkButton" type="LinkButton" parent="UI/VSplitContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 469.0
margin_bottom = 14.0
text = "(click to get test file)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instruction2" type="Label" parent="UI/VSplitContainer/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 153.0
text = "2. Set options
3. Press \"Create font\"
    If you want to customize kering, you can do it fast by clicking \"Set by space between\" button, or more detalized:
1. Select the character pairs you want to change the kering of using \"Filter\"
2. Use \"Apply to selected\" to apply kering to all selected pairs or use spinboxes to change kering manually
    To get your font file, open the \"Export\" tab and click \"Save as file\""

[node name="FileDialogOpen" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = -124.5
margin_right = 218.5
margin_bottom = 124.5
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.bmp", "*.jpg", "*.jpeg" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogSave" type="FileDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.5
margin_top = -124.5
margin_right = 218.5
margin_bottom = 124.5
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
access = 2
filters = PoolStringArray( "*.font" )
current_dir = "/"
current_path = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -145.158
margin_top = -139.148
margin_right = -13.158
margin_bottom = -6.14783
rect_pivot_offset = Vector2( 283.701, 237.902 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Sprite"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoweredBy" type="Label" parent="Sprite/HBoxContainer"]
margin_right = 74.0
margin_bottom = 14.0
text = "Powered by"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPoweredBy" type="LinkButton" parent="Sprite/HBoxContainer"]
margin_left = 78.0
margin_right = 137.0
margin_bottom = 14.0
text = "YouLikeIt"

[connection signal="file_selected" from="UI/FileDialogOpen" to="." method="_on_FileDialogOpen_file_selected"]
[connection signal="file_selected" from="UI/FileDialogSave" to="." method="_on_FileDialogSave_file_selected"]
